--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,4 @@ project(Octree)
 
 include_directories(.)
 
-add_executable(Octree main.cpp OctreeComparable.h OctreeComparator.h Octree.h)
+add_executable(Octree main.cpp new.h)
