--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
 project(Octree)
 
+cmake_minimum_required(VERSION 3.15)
+
 include_directories(.)
 
-add_executable(Octree main.cpp new.h)
+add_executable(Octree main.cpp Octree.h)
