--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,4 @@ cmake_minimum_required(VERSION 3.15)
 
 include_directories(.)
 
-add_executable(Octree main.cpp Octree.h)
+add_executable(Octree main.cpp)
