--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,6 @@ project(Octree)
 
 cmake_minimum_required(VERSION 3.15)
 
-include_directories(.)
+include_directories(include)
 
 add_executable(Octree main.cpp)
