:heavy_plus_sign: Add glad.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,1 +1,6 @@
+add_library(GLAD glad.c)
+
 add_executable(Octree main.cpp)
+
+target_link_libraries(Octree GLAD)
+target_link_libraries(Octree ${GLUT_LIBRARIES})
