--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 add_library(GLAD glad.c)
 
-add_executable(Octree main.cpp)
+add_executable(Octree main.cpp shader.cpp camera.cpp util.cpp)
 
 target_link_libraries(Octree GLAD)
 target_link_libraries(Octree ${GLUT_LIBRARIES})
